placeholder bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -171,8 +171,9 @@ body
 
 .form-control {
 	border-radius: 0px;
-	padding: 22px 20px;
+	padding: 10px 20px;
 	margin-bottom: 25px;
+	height: 43px;
 }
 
 input.empty, textarea.empty {
